--- a/data_manipulation.qmd
+++ b/data_manipulation.qmd
@@ -278,6 +278,7 @@ We could express this more concisely using `mutate()`, like this:
 
 ```{r}
 #| label: de-meaned-commute
+#| eval: false
 pums_person |>
   group_by(location, year) |>
   mutate(
